cmake_minimum_required(VERSION 3.15)

project (LTC)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_executable(3sum 3sum.cc)
add_executable(3sumMult 3sumMult.cc)
add_executable(3sumUnique 3sumUnique.cc)
add_executable(accounts_merge accounts_merge.cc)
add_executable(add_binary add_binary.cc)
add_executable(alien_dict alien_dict.cc)
add_executable(array_end_reachable array_end_reachable.cc)
add_executable(arrayProduct arrayProduct.cc)
add_executable(arraySum arraySum.cc)
add_executable(atoms_number atoms_number.cc)
add_executable(balancedBST balancedBST.cc)
add_executable(barber_wait_time barber_wait_time.cc)
add_executable(basic_calc basic_calc.cc)
add_executable(basic_calculator basic_calculator.cc)
add_executable(binary_tree_diameter binary_tree_diameter.cc)
add_executable(binary_tree_max_path_sum binary_tree_max_path_sum.cc)
add_executable(binary_tree_path_sum2 binary_tree_path_sum2.cc)
add_executable(binary_tree_path_sum3 binary_tree_path_sum3.cc)
add_executable(binary_tree_vertical_order binary_tree_vertical_order.cc)
add_executable(bishops_attacking bishops_attacking.cc)
add_executable(boundedQueue boundedQueue.cc)
add_executable(bst_all_paths bst_all_paths.cc)
add_executable(bst bst.cc)
add_executable(bst_floor_ceil_range bst_floor_ceil_range.cc)
add_executable(bst_from_preorder_traversal bst_from_preorder_traversal.cc)
add_executable(build_binary_tree_from_traversal build_binary_tree_from_traversal.cc)
add_executable(cheapestFlightBF cheapestFlightBF.cc)
add_executable(cheapestFlight cheapestFlight.cc)
add_executable(cheapestFlightPQ cheapestFlightPQ.cc)
add_executable(check_balanced_parens check_balanced_parens.cc)
add_executable(climb_stair climb_stair.cc)
add_executable(clone_graph clone_graph.cc)
add_executable(closestPalindrome closestPalindrome.cc)
add_executable(coin_change2 coin_change2.cc)
add_executable(coin_change coin_change.cc)
add_executable(combinationSum combinationSum.cc)
add_executable(combineStrings combineStrings.cc)
add_executable(configCombo configCombo.cc)
add_executable(connectedComponents connectedComponents.cc)
add_executable(convertBSTToSortedDoublyLinkedList convertBSTToSortedDoublyLinkedList.cc)
add_executable(coord coord.cc)
target_link_libraries(coord Threads::Threads)
add_executable(count_and_say count_and_say.cc)
add_executable(count_bits count_bits.cc)
add_executable(countBits countBits.cc)
add_executable(course_schedule course_schedule.cc)
add_executable(currency currency.cc)

add_executable(cyclicBarrier cyclicBarrier.cc)
target_link_libraries(cyclicBarrier Threads::Threads)

add_executable(decode decode.cc)
add_executable(degree_array degree_array.cc)
add_executable(editDistance editDistance.cc)
add_executable(examRoom examRoom.cc)
add_executable(expression_add_operator expression_add_operator.cc)
add_executable(find_celebrity find_celebrity.cc)
add_executable(findPeakElement findPeakElement.cc)
add_executable(first_bad_version first_bad_version.cc)
add_executable(first_nonrepeated_char first_nonrepeated_char.cc)
add_executable(firstpositive firstpositive.cc)
add_executable(fixedSizeWindowLimiter fixedSizeWindowLimiter.cc)
add_executable(flood_fill flood_fill.cc)
add_executable(frequentKelems frequentKelems.cc)
add_executable(game game.cc)
add_executable(gasup gasup.cc)
add_executable(graph_bipartite graph_bipartite.cc)
add_executable(graph graph.cc)
add_executable(graph_k_colorable graph_k_colorable.cc)
add_executable(graph_valid_tree graph_valid_tree.cc)
add_executable(greedy_graph_coloring greedy_graph_coloring.cc)
add_executable(group_anagrams group_anagrams.cc)
add_executable(heap heap.cc)
add_executable(helloWorld helloWorld.cc)
add_executable(house_robber house_robber.cc)
add_executable(inorder_traversal inorder_traversal.cc)
add_executable(insert_delete_random insert_delete_random.cc)
add_executable(insert_interval_in_sorted_non_overlapping_intervals insert_interval_in_sorted_non_overlapping_intervals.cc)
add_executable(interval_and_or interval_and_or.cc)
add_executable(interval interval.cc)
add_executable(interval_employee_free_time interval_employee_free_time.cc)
add_executable(interval_intersection interval_intersection.cc)
add_executable(interval_smallest_in_k_sorted_arrays interval_smallest_in_k_sorted_arrays.cc)
add_executable(invert_binary_tree invert_binary_tree.cc)
add_executable(iteratorIterator iteratorIterator.cc)
add_executable(k_closest_points_to_origin k_closest_points_to_origin.cc)
add_executable(knapsack knapsack.cc)
add_executable(k_similar_websites k_similar_websites.cc)
add_executable(kSmallestElementBST kSmallestElementBST.cc)
add_executable(largestIsland largestIsland.cc)
add_executable(last_n_order last_n_order.cc)
add_executable(leaf_similar leaf_similar.cc)
add_executable(least_interval least_interval.cc)
add_executable(level_order_binary_tree level_order_binary_tree.cc)
add_executable(linked_list_add linked_list_add.cc)
add_executable(linked_list_kth_last linked_list_kth_last.cc)
add_executable(linkedListRemoveVal linkedListRemoveVal.cc)
add_executable(longestCommonPrefix longestCommonPrefix.cc)
add_executable(longestCommonSubstr longestCommonSubstr.cc)
add_executable(longest_consecutive_nums longest_consecutive_nums.cc)
add_executable(longest_increasing_path longest_increasing_path.cc)
add_executable(longestIncreasingSubsequence longestIncreasingSubsequence.cc)
add_executable(longestPalindromeSize longestPalindromeSize.cc)
add_executable(longestPalindromeSubstring longestPalindromeSubstring.cc)
add_executable(longest_path longest_path.cc)
add_executable(longestRepeatingCharReplacement longestRepeatingCharReplacement.cc)
add_executable(longest_substring_k_distinct longest_substring_k_distinct.cc)
add_executable(longestSubstringNonRepeating longestSubstringNonRepeating.cc)
add_executable(lrucache lrucache.cc)
add_executable(lrucache_stl lrucache_stl.cc)
add_executable(lrucacheTemplate lrucacheTemplate.cc)
add_executable(majority_elem majority_elem.cc)
add_executable(makeNearestPalindrome makeNearestPalindrome.cc)
add_executable(matrix_min_steps_robot matrix_min_steps_robot.cc)
add_executable(matrixMult matrixMult.cc)
add_executable(matrixRegionSum matrixRegionSum.cc)
add_executable(max_depth_binary_tree max_depth_binary_tree.cc)
add_executable(max_flowers max_flowers.cc)
add_executable(max_frequency_min_subarray max_frequency_min_subarray.cc)
add_executable(max_overlapping_intervals_weighted max_overlapping_intervals_weighted.cc)
add_executable(max_path_binary_tree max_path_binary_tree.cc)
add_executable(maxRepeatedSubarray maxRepeatedSubarray.cc)
add_executable(max_subarray max_subarray.cc)
add_executable(maxSumIsland maxSumIsland.cc)
add_executable(median_sorted_arrays median_sorted_arrays.cc)
add_executable(median_stream median_stream.cc)
add_executable(meeting_rooms meeting_rooms.cc)
add_executable(merge_intervals merge_intervals.cc)
add_executable(merge_k_sorted_lists merge_k_sorted_lists.cc)
add_executable(merge_overlapping_intervals merge_overlapping_intervals.cc)
add_executable(mergeSort mergeSort.cc)
add_executable(mergeSortedArrays mergeSortedArrays.cc)
add_executable(mergeSortLinkedList mergeSortLinkedList.cc)
add_executable(minimumWindowSubstring minimumWindowSubstring.cc)
add_executable(min_square_num min_square_num.cc)
add_executable(min_tower_difference min_tower_difference.cc)
add_executable(nested_list nested_list.cc)
add_executable(nextPermutation nextPermutation.cc)
add_executable(non_adjacent_largest_sum non_adjacent_largest_sum.cc)
add_executable(nqueens nqueens.cc)
add_executable(num_islands num_islands.cc)
add_executable(num_to_words num_to_words.cc)
add_executable(one_two_bit_chars one_two_bit_chars.cc)
add_executable(pacific_atlantic pacific_atlantic.cc)
add_executable(paint_homes_min_cost paint_homes_min_cost.cc)
add_executable(palindrome palindrome.cc)
add_executable(path_standardized path_standardized.cc)
add_executable(peakMountain peakMountain.cc)
add_executable(permutationString permutationString.cc)
add_executable(permutationVector permutationVector.cc)
add_executable(pi_estimate_monte_carlo pi_estimate_monte_carlo.cc)
add_executable(pow pow.cc)
add_executable(powerSet powerSet.cc)
add_executable(preorder preorder.cc)
add_executable(quad_tree quad_tree.cc)
add_executable(quickSort quickSort.cc)
add_executable(rainwater rainwater.cc)
add_executable(random_linked_list random_linked_list.cc)
add_executable(random_number_range random_number_range.cc)
add_executable(range_sum_2d_repeat range_sum_2d_repeat.cc)
add_executable(read4 read4.cc)
add_executable(recursive_reverse_string recursive_reverse_string.cc)
add_executable(regex_matching regex_matching.cc)
add_executable(removeDup removeDup.cc)
add_executable(remove_duplicate remove_duplicate.cc)
add_executable(remove_invalid_paranthesis remove_invalid_paranthesis.cc)
add_executable(reservoir_sampling reservoir_sampling.cc)
add_executable(reverse_bits reverse_bits.cc)
add_executable(robot_in_bounded_circle robot_in_bounded_circle.cc)
add_executable(robot_uniq_paths2 robot_uniq_paths2.cc)
add_executable(robot_uniq_paths robot_uniq_paths.cc)
add_executable(run_length_encoding run_length_encoding.cc)
add_executable(same_tree same_tree.cc)
add_executable(satisfiability_equations satisfiability_equations.cc)
add_executable(screen_fitting screen_fitting.cc)
add_executable(search_rotated_array search_rotated_array.cc)
add_executable(serializeBinaryTree serializeBinaryTree.cc)
add_executable(shortest_distance_buildings shortest_distance_buildings.cc)
add_executable(shortest_path shortest_path.cc)
add_executable(singleton singleton.cc)
add_executable(spiralMatrix2 spiralMatrix2.cc)
add_executable(spiralMatrix spiralMatrix.cc)
add_executable(splitWise splitWise.cc)
add_executable(stack_using_heap stack_using_heap.cc)
add_executable(staircase staircase.cc)
add_executable(stockSaleAnyNumber stockSaleAnyNumber.cc)
add_executable(stockSaleKTimes stockSaleKTimes.cc)
add_executable(stockSaleOnce stockSaleOnce.cc)
add_executable(strict_chars_RGB strict_chars_RGB.cc)
add_executable(string_erase string_erase.cc)
add_executable(strToFloat strToFloat.cc)
add_executable(subarrays_sum_k subarrays_sum_k.cc)
add_executable(subarray_sum_multiple_k subarray_sum_multiple_k.cc)
add_executable(subdomain_visit subdomain_visit.cc)
add_executable(subsetSum subsetSum.cc)
add_executable(sudoku_valid sudoku_valid.cc)
add_executable(sum sum.cc)
add_executable(sumdistinct sumdistinct.cc)
add_executable(sum_int sum_int.cc)
add_executable(template template.cc)
add_executable(text_justify text_justify.cc)
add_executable(ticTacToe ticTacToe.cc)
add_executable(time_based_key_value_store time_based_key_value_store.cc)
add_executable(token_bucket token_bucket.cc)
add_executable(topo_sort topo_sort.cc)
add_executable(transform_word transform_word.cc)
add_executable(trie trie.cc)
add_executable(trie_word_search trie_word_search.cc)
add_executable(twitter_histogram twitter_histogram.cc)
add_executable(twitterLogStorage twitterLogStorage.cc)
add_executable(unival unival.cc)
add_executable(validBST validBST.cc)
add_executable(verify_alien_dict verify_alien_dict.cc)
add_executable(weighted_random weighted_random.cc)
add_executable(wildcard_matching wildcard_matching.cc)
add_executable(wordBreak wordBreak.cc)
add_executable(word_positions word_positions.cc)
add_executable(xor xor.cc)
add_executable(zigzagorder zigzagorder.cc)


